--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,6 @@
     />
     <!-- link css -->
     <link rel="stylesheet" href="./css/gallery.css">
-    <link rel="stylesheet" href="./css/contact.css">
     <link rel="stylesheet" href="./css/blog.css">
 </head>
 <body>
@@ -59,16 +58,16 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Home</a>
+                  <a class="nav-link" href="./home.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
+                  <a class="nav-link" href="./about.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Services</a>
+                  <a class="nav-link" href="./service.html">Services</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Gallery</a>
+                  <a class="nav-link" href="./gallery.html">Gallery</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link active dropdown-toggle" aria-current="page" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -76,13 +75,13 @@
                     <i class="fa-solid fa-angle-down fs-6"></i>
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <li><a class="dropdown-item" href="#">Blog Posts</a></li>
+                    <li><a class="dropdown-item" href="./blog.html">Blog Posts</a></li>
                     <li><a class="dropdown-item" href="#">Blog single</a></li>
                     <li><a class="dropdown-item" href="#">Landing Page</a></li>
                   </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
+                  <a class="nav-link" href="./contact.html">Contact</a>
                 </li>
               </ul>
             </div>
