--- a/gallery.html
+++ b/gallery.html
@@ -25,8 +25,8 @@
     <link rel="stylesheet" href="./css/gallery.css">
 </head>
 <body>
-  <!-- Right Bar -->
-  <div class="demo-bar-right text-center">
+    <!-- Right Bar -->
+    <div class="demo-bar-right text-center">
     <div class="icon">
       <i class="fa-solid fa-angles-right"></i>
       <div class="list-icon">
@@ -44,8 +44,8 @@
         </div>
       </div>
     </div>
-  </div>
-  <!-- Header -->
+    </div>
+    <!-- Header -->
     <header class="header position-fixed start-0 end-0 bg-white py-2">
       <div class="container ps-0 pe-5 pe-sm-5 pe-md-0">
         <nav class="navbar navbar-expand-md navbar-light bg-light">
@@ -57,16 +57,16 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Home</a>
+                  <a class="nav-link" href="./home.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
+                  <a class="nav-link" href="./about.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Services</a>
+                  <a class="nav-link" href="./service.html">Services</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Gallery</a>
+                  <a class="nav-link active" aria-current="page" href="./gallery.html">Gallery</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -74,13 +74,13 @@
                     <i class="fa-solid fa-angle-down fs-6"></i>
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <li><a class="dropdown-item" href="#">Blog Posts</a></li>
+                    <li><a class="dropdown-item" href="./blog.html">Blog Posts</a></li>
                     <li><a class="dropdown-item" href="#">Blog single</a></li>
                     <li><a class="dropdown-item" href="#">Landing Page</a></li>
                   </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
+                  <a class="nav-link" href="./contact.html">Contact</a>
                 </li>
               </ul>
             </div>
