--- a/gallery.html
+++ b/gallery.html
@@ -97,7 +97,7 @@
           <h2 class="title">Gallery</h2>
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="#" class="text-decoration-none">Home</a></li>
+              <li class="breadcrumb-item"><a href="./home.html" class="text-decoration-none">Home</a></li>
               <li class="breadcrumb-item active text-white" aria-current="page">
                 <i class="fa-solid fa-arrow-right fs-6 mx-1"></i>
                 Gallery
