link phone & mail footer

--- a/about.html
+++ b/about.html
@@ -304,11 +304,11 @@
               </p>
               <p class="mb-2">
                 <strong>Phone :</strong>
-                <a href="#">+(12)234-11-24</a>
+                <a href="tel:+(12)234-11-24">+(12)234-11-24</a>
               </p>
               <p class="mb-2">
                 <strong>Email :</strong>
-                <a href="#">example@mail.com</a>
+                <a href="mailto:example@mail.com">example@mail.com</a>
               </p>
             </div>
             <div class="footer-icon mt-4">
@@ -361,7 +361,7 @@
         <div class="footer-copyright mt-5 text-center">
           <p class="pt-5">
             © 2020 Pooch Care. All Rights Reserved. Design by
-            <a href="#">W3Layouts</a>
+            <a href="https://w3layouts.com/">W3Layouts</a>
           </p>
         </div>
       </div>
