--- a/home.html
+++ b/home.html
@@ -93,7 +93,7 @@
                 <img src="./img/banner1.jpg" class="d-block w-100" alt="...">
                 <div class="img-bg"></div>
                 <div class="container">
-                    <div class="carousel-caption carousel-caption_1 d-none d-md-block">
+                    <div class="carousel-caption carousel-caption_1  d-md-block">
                         <h5>Quality Things for Loving Pets</h5>
                         <p>Keeps your Pet Smiling</p>
                         <a class="read-more">Read More</a>
@@ -106,7 +106,7 @@
                 <img src="./img/banner2.jpg" class="d-block w-100" alt="...">
                 <div class="img-bg"></div>
                 <div class="container">
-                    <div class="carousel-caption carousel-caption_2 d-none d-md-block">
+                    <div class="carousel-caption carousel-caption_2  d-md-block">
                         <h5>Delivering happiness for Pets</h5>
                         <p>For the love of pets </p>
                         <a class="read-more">Read More</a>
@@ -119,7 +119,7 @@
                 <img src="./img/banner3.jpg" class="d-block w-100" alt=".." >
                 <div class="img-bg"></div>
                 <div class="container">
-                    <div class="carousel-caption carousel-caption_1 d-none d-md-block">
+                    <div class="carousel-caption carousel-caption_1  d-md-block">
                         <h5>Quality Things for Loving Pets</h5>
                         <p>Keeps your Pet Smiling</p>
                         <a class="read-more">Read More</a>
@@ -130,7 +130,7 @@
                 <img src="./img/banner4.jpg" class="d-block w-100" alt="...">
                 <div class="img-bg"></div>
                 <div class="container">
-                    <div class="carousel-caption carousel-caption_2 d-none d-md-block">
+                    <div class="carousel-caption carousel-caption_2  d-md-block">
                         <h5>Delivering happiness for Pets</h5>
                         <p>We help your Projects</p>
                         <a class="read-more">Read More</a>
