--- a/service.html
+++ b/service.html
@@ -107,10 +107,10 @@
         <section id="portfolio">
             <div class="container">
                 <div class="row">
-                    <div class="col col-6">
+                    <div class="col col-12 col-md-12 col-lg-6">
                         <img src="./img/g1.jpg" alt="">
                     </div>
-                    <div class="col col-6">
+                    <div class="col col-12 col-md-12 col-lg-6">
                         <div class="card" style="width: 18rem;">
                             <div class="card-body">
                               <h4 class="card-title">01</h4>
@@ -126,7 +126,7 @@
                 </div>
                 <hr />
                 <div class="row">
-                    <div class="col col-6">
+                    <div class="col col-12 col-md-12 col-lg-6">
                         <div class="card" style="width: 18rem;">
                             <div class="card-body">
                               <h4 class="card-title">02</h4>
@@ -139,16 +139,16 @@
                             </div>
                           </div>
                     </div>
-                    <div class="col col-6">
+                    <div class="col col-12 col-md-12 col-lg-6">
                         <img src="./img/g2.jpg" alt="">
                     </div>
                 </div>
                 <hr />
                 <div class="row">
-                    <div class="col col-6">
+                    <div class="col col-12 col-md-12 col-lg-6">
                         <img src="./img/g3.jpg" alt="">
                     </div>
-                    <div class="col col-6">
+                    <div class="col col-12 col-md-12 col-lg-6">
                         <div class="card" style="width: 18rem;">
                             <div class="card-body">
                               <h4 class="card-title">03<h4>
@@ -164,7 +164,7 @@
                 </div>
                 <hr />
                 <div class="row">
-                    <div class="col col-6">
+                    <div class="col col-12 col-md-12 col-lg-6">
                         <div class="card" style="width: 18rem;">
                             <div class="card-body">
                               <h4 class="card-title">04</h4>
@@ -177,7 +177,7 @@
                             </div>
                           </div>
                     </div>
-                    <div class="col col-6">
+                    <div class="col col-12 col-md-12 col-lg-6">
                         <img src="./img/g4.jpg" alt="">
                     </div>
                 </div>
