--- a/about.html
+++ b/about.html
@@ -139,16 +139,16 @@
                     blanditiis.Lorem ipsum dolor sit amet,Ea consequuntur illum facere aperiam sequi optio
                     consectetur adipisicing elit.</p>
                 <div class="row">
-                    <div class="col col-6 col-md-3">
+                    <div class="col col-6 col-sm-3 ">
                         <h3>2017</h3>
                         <span>Lorem ipsum  <br /> dolor sit amet</span>
-                    </div> <div class="col col-6 col-md-3">
+                    </div> <div class="col col-6 col-sm-3 ">
                         <h3>2018</h3>
                         <span>Lorem ipsum <br /> dolor sit amet</span>
-                    </div> <div class="col col-6 col-md-3">
+                    </div> <div class="col col-6 col-sm-3 ">
                         <h3>2019</h3>
                         <span>Lorem ipsum <br />  dolor sit amet</span>
-                    </div> <div class="col col-6 col-md-3">
+                    </div> <div class="col col-6 col-sm-3 ">
                         <h3>2020</h3>
                         <span>Lorem ipsum <br />  dolor sit amet</span>
                     </div>
@@ -162,7 +162,7 @@
     <section id="choose-us">
         <div class="container">
             <div class="row">
-                <div class="col col-text-1 col-12">
+                <div class="col col-text-1 col-12 col-lg-6">
                     <h4>WHO WE ARE</h4>
                     <h2>Why Choose Us</h2>
                     <p> Phasellus lacinia id erat eu
@@ -171,7 +171,7 @@
                    
                         <img src="./img/banner3.jpg" alt="">
                 </div>
-                <div class="col col-text-2 col-12">
+                <div class="col col-text-2 col-12 col-lg-6">
                     <div class="row">
                         <div class="col-12 col-md-2">
                             <i class="fa-solid fa-hands-asl-interpreting"></i>
@@ -222,8 +222,8 @@
             <h4>OUR EXPERTS</h4>
             <h2>Our Team</h2>
             <div class="row">
-                <div class="col col-6 col-lg-3">
-                    <div class="card" style="width: 18rem;">
+                <div class="col col-6 col-md-6  col-lg-3">
+                    <div class="card">
                         <div class="card-img">
                             <img src="./img/team1.jpg" class="card-img-top" alt="...">
                         </div>
@@ -238,8 +238,8 @@
                         </div>
                       </div>
                 </div>
-                <div class="col col-6 col-lg-3">
-                    <div class="card" style="width: 18rem;">
+                <div class="col col-6 col-md-6 col-lg-3">
+                    <div class="card">
                         <div class="card-img">
                         <img src="./img/team2.jpg" class="card-img-top" alt="...">
                         </div>
@@ -254,8 +254,8 @@
                         </div>
                       </div>
                 </div>
-                <div class="col col-6 col-lg-3">
-                    <div class="card" style="width: 18rem;">
+                <div class="col col-6 col-md-6  col-lg-3">
+                    <div class="card">
                         <div class="card-img">
                         <img src="./img/team3.jpg" class="card-img-top" alt="...">
                         </div>
@@ -270,8 +270,8 @@
                         </div>
                       </div>
                 </div>
-                <div class="col col-6 col-lg-3">
-                    <div class="card" style="width: 18rem;">
+                <div class="col col-6 col-md-6  col-lg-3">
+                    <div class="card">
                         <div class="card-img">
                         <img src="./img/team4.jpg" class="card-img-top" alt="...">
                         </div>
