--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
     <!-- Header -->
     <header class="header position-fixed start-0 end-0 bg-white py-2">
       <div class="container ps-0 pe-5 pe-sm-5 pe-md-0">
-        <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <nav class="navbar navbar-expand-md navbar-light">
           <div class="container-fluid">
             <a class="navbar-brand" href="#">Pooch Care</a>
             <button
