--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
       </div>
     </header>
 
+    <!-- Carousel -->
     <section class="carousel">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
