--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto">
                   <li class="nav-item">
-                    <a class="nav-link" href="./home.html">Home</a>
+                    <a class="nav-link" href="./index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="./about.html">About</a>
@@ -94,7 +94,7 @@
           <h2 class="title">About Us</h2>
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="./home.html" class="text-decoration-none">Home</a></li>
+              <li class="breadcrumb-item"><a href="./index.html" class="text-decoration-none">Home</a></li>
               <li class="breadcrumb-item active text-white" aria-current="page">
                 <i class="fa-solid fa-arrow-right fs-6 mx-1"></i>
                 About
