--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="./home.html">Home</a>
+                  <a class="nav-link" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./about.html">About</a>
@@ -123,7 +123,7 @@
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
               <li class="breadcrumb-item">
-                <a href="./home.html" class="text-decoration-none">Home</a>
+                <a href="./index.html" class="text-decoration-none">Home</a>
               </li>
               <li class="breadcrumb-item active text-white" aria-current="page">
                 <i class="fa-solid fa-arrow-right fs-6 mx-1"></i>
